# ToDoList

./: .gitignore  Dockerfile  README.md  auth.py  compose.yaml  database.py  main.py  pyproject.toml  requirements.txt  to_do_list.db
app/: auth.py  database.py  emailVerification.py  main.py  to_do_list.db
app/api/: main.py
app/api/routes/: group.py  login.py  tasks.py  users.py
app/core/: auth.py  database.py  emailVerification.py  security.py
app/models/: Group.py  GroupTask.py  Task.py  User.py  email.py  invitations.py  members.py  update.py
docker/: .dockerignore  Dockerfile  compose.yaml
models/: Group.py  GroupTask.py  Task.py  User.py  invitations.py  members.py  update.py
